--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 <body>
-  <div>
+  <div style="padding: 50px; font-size: 25px; line-height: 1.2em;">
+    <button class="connect-button">Connect</button>
     <button class="pay-button">Pay</button>
     <div id="status"></div>
   </div>
@@ -25,6 +26,11 @@
         $('#status').html('No Metamask (or other Web3 Provider) installed')
       }
     })
+    
+    const initConnectButton = () => {
+      $('.connect-button').click(() => {
+        ethereum.enable();
+      })
 
     const initPayButton = () => {
       $('.pay-button').click(() => {
